# code-share

cnpc/: README.md
cnpc/dserver/: .gitignore  README.md  build.sh  dserver.go  go.mod  go.sum
cnpc/dserver/common/: config.go  consts.go  eff_struct.go  errormsg.go  obs_struct.go  orm_struct.go  sales_struct.go  struct.go  sys_struct.go  util.go  vendor_struct.go
cnpc/dserver/conf/: cert.pem  dserver.yaml  key.pem
cnpc/dserver/orm/: basic_class.go  basic_material.go  basic_org.go  basic_plant.go  basic_vendor.go  db.go  eff_metric_cfg.go  eff_test_market.go  eff_test_market_cfg.go  inv_material.go  kpi.go  material.go  obs_price_zone.go  obs_price_zone.go.1  obs_price_zone.go.2  obs_price_zone_cfg.go  obs_scenes.go  obs_specs_zone.go  sales_class.go  sales_material.go  sales_material_cfg.go  sales_material_nosales.go  sales_material_nosales_cfg.go  sales_org.go  sales_plant_car_service.go  sales_plant_cfg.go  sales_plant_level_cfg.go  sales_posdm.go  settings.go  sys_user.go  vendor_bible_cfg.go  vendor_cfg.go  vendor_erp.go  vendor_erp_report.go  vendor_exmatl_cfg.go  vendor_material.go  vendor_material_report.go  vendor_rating_cfg.go  vendor_rating_report.go
cnpc/dserver/test/: chan.go  cos  cos.go  test_log.go
cnpc/dserver/zaps/: log.go
cnpc/frontend/: README.md  package-lock.json  package.json  readme  vue.config.js
cnpc/src/Business/src/: CMakeLists.txt  business.cpp  business.h  china-petro.cpp  db-util.cpp  db-util.h  utf8.c
letspartey/be/: conf.yaml  go.mod  go.sum  serve.go
letspartey/fe/: package-lock.json  package.json  vue.config.js
(+127 files in other folders)
